--- a/breizhcamp-2018-console/package.json
+++ b/breizhcamp-2018-console/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/chloekcz/bzh-2018#readme",
   "dependencies": {
-    "request": "^2.88.0"
+    "jsdom": "^13.0.0",
+    "request": "^2.88.0",
+    "request-promise-native": "^1.0.5"
   }
 }
